<resources>
    <string name="app_name">League Quiz</string>
    <string name="league_quiz">League Quiz!</string>
    <string name="name">name</string>
    <string name="what_is_your_favorite_champ">What is your favorite champ?</string>
    <string name="when_was_league_created">When was league created?</string>
    <string name="who_was_the_first_champion">Who was the first champion?</string>
    <string name="submit">Submit</string>
    <string name="what_is_the_highest_rank_in_league">What is the highest rank in League?</string>
    <string name="please_fill_out_ALL_fields">Please fill out ALL fields</string>
    <string name="hey">Hey,\u0020</string>
    <string name="greeting_fav_champ">\u0020my favorite champ is also\u0020</string>
    <string name="and_you_got">\nYou got\u0020</string>
    <string name="answers_correct">\u0020answer(s) correct\u0020</string>
    <string name="select_all_summoner_spells">Select ALL summoner spells.</string>
    <string name="heal">Heal</string>
    <string name="ignite">Ignite</string>
    <string name="teleport">Teleport</string>
</resources>